Landing footer semicompleto

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Loudify</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scale=none">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
